<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.androidapps.arati.snackmart.MainActivity">

    <TextView
        android:id="@+id/new_snack_title"
        style="@style/MyDialogTitle"
        android:text="@string/new_snack_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Switch
        android:id="@+id/new_snack_type_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="80dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:textOn="@string/snack_type_veggie"
        android:textOff="Non-Veggie"
        android:showText="false"
        android:checked="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_snack_title"
        />
    <TextView
        android:id="@+id/left_switch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/snack_type_nonveggie"
        android:textColor="@color/nonVeggieColor"
        app:layout_constraintRight_toLeftOf="@id/new_snack_type_switch"
        app:layout_constraintBaseline_toBaselineOf="@id/new_snack_type_switch" />

    <TextView
        android:id="@+id/right_switch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Veggie"
        android:textColor="@color/veggieColor"
        app:layout_constraintLeft_toRightOf="@id/new_snack_type_switch"
        app:layout_constraintBaseline_toBaselineOf="@id/new_snack_type_switch"/>


    <EditText
        android:id="@+id/new_snack_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/new_snack_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_snack_type_switch"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
