<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidapps.arati.snackmart.MainActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/actionBarBgColor"/>

    <CheckBox
        android:id="@+id/veggie_checkbox"
        style="@style/MyCheckbox.type.veggie"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/snack_type_veggie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <CheckBox
        android:id="@+id/nonveggie_checkbox"
        style="@style/MyCheckbox.type.nonveggie"
        android:layout_marginLeft="16dp"
        android:text="@string/snack_type_nonveggie"
        app:layout_constraintBaseline_toBaselineOf="@id/veggie_checkbox"
        app:layout_constraintStart_toEndOf="@id/veggie_checkbox" />

    <TextView
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/veggie_checkbox"/>


    <ListView
        android:id="@+id/snack_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:divider="@null"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/actionBarBgColor"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/submit_button"
        android:textColor="@color/actionBarTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
